<resources>
    <string name="app_name">ticket</string>
    <string name="display_name">ST Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="ria">Ria</string>
    <string name="special">Special</string>
    <string name="eval">Evaluation</string>
    <string name="sender_name">Sender Name</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="branch">Branch</string>
    <string name="phone">Phone</string>
    <string name="location">Address</string>
    <string name="to_branch">To Branch</string>
    <string name="from_branch">From Branch</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="code">Code</string>
    <string name="action_sync">Synchronize</string>
    <string name="action_settings">Settings</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>
    <string name="print">Print</string>
    <string name="close">Close</string>
    <string name="poor">Poor</string>
    <string name="pretty_good">Pretty Good</string>
    <string name="good">Good</string>
    <string name="very_good">Very Good</string>
    <string name="excellent">Excellent</string>
    <string name="comment">Comment</string>
    <string name="service_level">Our service level</string>
    <string name="full_name">Your full name</string>
    <string name="phone_number">Your phone number</string>
    <string name="bluetooth_connected">Printer connected</string>
    <string name="bluetooth_failed">Printer connection failed</string>
    <string name="bluetooth_disconnected">Printer disconnected</string>
    <string name="printer_confirmation_title">Confirmation</string>
    <string name="printer_confirmation_message">Have you get your ticket?</string>
    <string name="eval_scan_confirmation_title">Error</string>
    <string name="eval_scan_confirmation_message">Ticket scan error would you restart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="eval_get_confirmation_title">Error</string>
    <string name="eval_get_confirmation_message">Error on searching ticket would you try?</string>
    <string name="ticket_printed">Ticket printed</string>
    <string name="please_insert_number">Insert correct number eg:(0828282082)</string>
    <string name="type_card">Type of card</string>
    <string name="card_expiry_date">Card expiry date</string>
    <string name="printer_out_paper">Printer is out of paper</string>
    <string name="printer_offline">Printer is offline</string>
    <string name="printer_unknown_error">Printer has an unknown error</string>
    <string name="printer_disconnected">Printer is disconnected</string>
    <string name="printer_write_failed">Printer can\'t write</string>
    <string name="action_save">Save</string>
    <string name="receiver_phone">Receiver phone</string>
    <string name="sender_phone">Sender phone</string>
    <string name="message">Message</string>
    <string name="cancel_ticket_confirmation_title">Confirmation</string>
    <string name="cancel_ticket_confirmation_message">Would you cancel this ticket?</string>
    <string name="network_error_title">Connection error</string>
    <string name="network_error_message">Network error\nWould you retry?</string>
    <string name="action_server_settings">Server Settings</string>
    <string name="ok">OK</string>
    <string name="server_unavailable">Server unavailable</string>
    <string name="error_title">Error</string>
    <string name="server_error_message">Server not found</string>
    <string name="server_address">Insert the server address</string>
    <string name="action_log_out">Log out</string>
    <string name="action_skip">Skip</string>
    <string name="ria_form">Ria Form</string>
    <string name="receive_form">Receive Form</string>
    <string name="send_form">Send Form</string>
    <string name="special_form">Special Form</string>
    <string name="identity_card">Identity Card</string>
    <string name="password_error">Wrong Password</string>
    <string name="username_error">Wrong Username</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="send_usd">Send USD</string>
    <string name="send_cdf">Send CDF</string>
    <string name="receive_usd">Receive $</string>
    <string name="receive_cdf">Receive Fc</string>
    <string name="special_usd">Special $</string>
    <string name="special_cdf">Special Fc</string>
    <string name="action_advanced">Advanced</string>
    <string name="default_printer">Default Printer</string>
    <string name="printer_types">Printer Types</string>
    <string name="printer">Printer</string>
    <string name="internal_printer">Internal printer</string>
    <string name="bluetooth_printer">Bluetooth printer</string>
    <string name="wifi_printer">Wifi printer</string>
    <string name="usb_printer">USB printer</string>
    <string name="printer_address">Printer address</string>
    <string name="ria_small">Ria small</string>
    <string name="ria_big">Ria big</string>
    <string name="money_trans">Money Trans</string>
    <string name="money_gram">Money Gram</string>
    <string name="please_set_default_printer">Please set the default printer</string>
    <string name="scan_card">Scanning card</string>
    <string name="sign">Signature</string>
    <string name="signature_pad">Signature pad</string>
    <string name="clear">Clear</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="signature_cleaning_warning">Would you clear the signature?</string>
    <string name="phone_detection">Phone detection</string>
    <string name="action_server_clients_settings">Server Clients Settings</string>
    <string name="action_add_client">add client</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name &amp; Fore name</string>
    <string name="email">Email</string>
    <string name="picture">Your picture</string>
    <string name="card_number">Card number</string>
    <string name="person_title">Title</string>
    <string name="please_capture_card_id">Please capture your card id</string>
    <string name="please_insert_signature">Please insert your signature</string>
    <string name="please_insert_picture">Please take your picture</string>
    <string name="please_select_your_title">Please select your title</string>
    <string name="please_insert_first_name">Please insert your first name</string>
    <string name="please_insert_last_name">Please insert your last name</string>
    <string name="form">Form</string>
    <string name="action_user_log">Statics</string>
    <string name="action_version_settings">Version</string>
    <string name="token">Token</string>
    <string name="crash_toast_text">App Crashed</string>
    <string name="capture">Capture</string>
    <string name="action_simple">Simple</string>
    <string name="action_simple_client">Simple Client</string>
    <string name="client_service_info_1">Do not hesitate to contact us if you have a problem or need information</string>
    <string name="client_service_info_2">on <b>+243 819 872 972 444</b> or <b>+243 998 724 444</b></string>
    <string name="client_service_info_3">on <b>dir@groupesoficom.com</b></string>
    <string name="client_service_info_4">on <b>www.groupesoficom.com</b></string>
    <string name="login">Login</string>
    <string name="soficom_transfert">Soficom Transfert</string>
    <string name="loading">Loading</string>
    <string name="no_connection_error_title">Connection error</string>
    <string name="no_connection_error_text">Check your internet connection</string>
    <string name="time_out_error_title">Connection timeout</string>
    <string name="time_out_error_text">Please try again or change internet network</string>
    <string name="server_error_title">Server unavailable</string>
    <string name="server_error_text">Please try again later or contact technical support</string>
    <string name="network_error_text">Network error, please try again</string>
    <string name="authentication_error_title">Authentication Failure</string>
    <string name="authentication_error_text">Please check your username, password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>