<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_card"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/cardEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" android:minLines="1"
                android:lines="1" android:imeOptions="actionNext"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardExpiryDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_expiry_date"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardExpiryDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1" android:imeOptions="actionNext"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1" android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions|textCapCharacters"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>